--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,21 @@
     box-sizing: border-box;
 }
 
-p{
-    display: inline-block; 
+body{
+    background-color: rgb(31, 28, 28);
 }
 
+h1{
+    color:rgb(213, 203, 203); 
+}
+
+p{
+    display: inline-block; 
+    color: white;
+}
+
+
+
+/* button{
+    color: white; 
+} */
